--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 whut up brah
 
 
-you took so long you started to smell so baaaad.
+you took so long you started to smell so baaaad. <--- way to finally fix your spelling error.
