Adding readme with ID and Name to use if you don't have one

--- a/README
+++ b/README
@@ -2,3 +2,6 @@ whut up brah
 
 
 you took so long you started to smell so baaaad. <--- way to finally fix your spelling error.
+
+
+Default battle net ID and User name to test form = 582084, Bran.
